<resources>
    <string name="app_name">Furniture Magik</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="sign_in">Sign In</string>
    <string name="get_otp">Get OTP</string>
    <string name="sell">Sell</string>
    <string name="mobile_number">10 Digit Mobile Number</string>
    <string name="verify_number">Enter Verification Code</string>
    <string name="offers_title">New Offers</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="discount_price">Discount Price</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="image_error">Upload Image</string>
    <string name="productname_error">Enter the Product Name</string>
    <string name="price_error">Enter Correct Price value</string>
    <string name="db_name">furnitue_magik.db</string>
</resources>