<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/sell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:text="@string/sell"
                android:textColor="@android:color/black"
                android:textSize="50dp" />

            <EditText
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:focusable="true"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true" />


            <Button
                android:id="@+id/get_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@color/bgsnowgrey"
                android:enabled="false"
                android:padding="20dp"
                android:text="@string/get_otp"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:id="@+id/verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:focusable="true"
                android:hint="@string/verify_number"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:visibility="gone" />


            <Button
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:background="@color/bgsnowgrey"
                android:enabled="false"
                android:padding="20dp"
                android:text="@string/sign_in"
                android:textColor="@android:color/darker_gray"
                android:visibility="gone" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>